# 2024-SP-102-pa02-arraylist

./: Dockerfile  MyVector.h  MyVector.hpp  README.md  buildit.sh  docker_build.sh  docker_run.sh  grade.sh  main  main.cpp  results.txt
.admin_files/: .gdbinit  CMakeLists.txt  Dockerfile  grade_backend.sh  grader_hashes.txt  hash_gen.sh  hashes.txt  test_utils.py
mem_tests/: mem_test_0_Destructor.cpp  mem_test_1_AssignOp.cpp  mem_test_2_CopyConstructor.cpp  mem_test_3_Insert.cpp  mem_test_4_Erase.cpp  mem_test_5_Swap.cpp  mem_test_6_ShrinkToFit.cpp
stdio_tests/diffs/: iotest_0.html  iotest_0.txt  iotest_1.html  iotest_1.txt  iotest_2.html  iotest_2.txt  iotest_3.html  iotest_3.txt  iotest_4.html  iotest_4.txt  iotest_5.html  iotest_5.txt
stdio_tests/goals/: iotest_0_output.txt  iotest_1_output.txt  iotest_2_output.txt  iotest_3_output.txt  iotest_4_output.txt  iotest_5_output.txt
stdio_tests/inputs/: iotest_0_AddFire.txt  iotest_1_plusSleptCrash.txt  iotest_2_plusDiseaseGuilt.txt  iotest_3_plusAudit.txt  iotest_4_AllMed.txt  iotest_5_AllHuge.txt
stdio_tests/outputs/: iotest_0_output.txt  iotest_1_output.txt  iotest_2_output.txt  iotest_3_output.txt  iotest_4_output.txt  iotest_5_output.txt
unit_tests/: template  unit_00_Clear.cpp  unit_01_Insert.cpp  unit_02_erase.cpp  unit_03_find.cpp  unit_04_AssignOp.cpp  unit_05_CopyConstructor.cpp  unit_06_Swap.cpp
